2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shorten scopes
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Factor binaries
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Do not allow string order-comparison
	* src/uexpression.cc: Here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Upgrade ENSURE_COMPARISON
	* src/uexpression.cc (ENSURE_COMPARISON): Be given e1 and e2.
	Adjust callers.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	EVAL_EXPR_COMPARISON
	* src/uexpression.cc: New.
	Use it.
	Shorten scopes.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	eval_EXPR_VARIABLE
	* src/uexpression.hh, src/uexpression.cc (eval_EXPR_VARIABLE): New.
	(eval): Extracted from here.
	(devicename, methodname): Remove, unused.
	(errSize): Remove, used, but useless.
	(errorString): Use a tighter scope.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shrink the scope of ret
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Add braces
	* src/uexpression.cc: in this monster.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes
	* src/parser/bison/ugrammar.y: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	windows.hh
	* src/console.cc: Adjust.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Clean UExpressions
	* src/utypes.hh (UExpressionType): Move to...
	* src/uexpression.hh, src/uexpression.cc (UExpression::Type): Here.
	Adjust all dependencies.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes
	* src/ucommandqueue.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Update uobject

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Include cassert
	* src/parser/uparser.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Fix location tracking
	* src/parser/uparser.cc, src/parser/uparser.hh (UParser::loc_):
	New.
	* src/parser/bison/ugrammar.y: Use it.